@@ -1,5 +1,6 @@
 package com.example.projectFinal.service;
 
+import com.example.projectFinal.dto.UserMissionDto;
 import com.example.projectFinal.entity.MissionEntity;
 import com.example.projectFinal.entity.User;
 import com.example.projectFinal.entity.UserMissionEntity;
@@ -9,6 +10,7 @@ import com.example.projectFinal.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -39,7 +41,7 @@ public class UserMissionService {
             UserMissionEntity userMission = UserMissionEntity.builder()
                     .userId(user)
                     .missionId(mission)
-                    .used(false)
+                    .complete(false)
                     .build();
 
             userMissionRepository.save(userMission);
@@ -48,7 +50,7 @@ public class UserMissionService {
     }
 
 
-    public List<UserMissionEntity> getUnusedMissionsForUser(String userId) {
+    public List<UserMissionDto> getUnusedMissionsForUser(String userId) {
         // user 찾기
         User user = userRepository.findByUserId(userId);
         if (user == null) {
@@ -56,10 +58,43 @@ public class UserMissionService {
         }
 
         // 사용하지 않은 미션 가져오기
-        List<UserMissionEntity> unusedMissions = userMissionRepository.findByUserIdAndUsed(user, false);
+        List<UserMissionEntity> unusedMissions = userMissionRepository.findByUserIdAndComplete(user, false);
+
+        if (unusedMissions.isEmpty()) {
+            return Collections.emptyList();
+        }
 
         Collections.shuffle(unusedMissions);
-        return unusedMissions.stream().limit(3).collect(Collectors.toList());
+        List<UserMissionEntity> limitedUnusedMissions = unusedMissions.stream().limit(3).toList();
 
+        List<UserMissionDto> result = new ArrayList<>();
+
+        for (UserMissionEntity limitedUnusedMission : limitedUnusedMissions) {
+            UserMissionDto userMissionDto = UserMissionDto.builder()
+                    .missionId(limitedUnusedMission.getMissionId().getMissionId())
+                    .mission(limitedUnusedMission.getMissionId().getMission())
+                    .meaning(limitedUnusedMission.getMissionId().getMeaning())
+                    .complete(limitedUnusedMission.isComplete())
+                    .build();
+
+            result.add(userMissionDto);
+        }
+        return result;
     }
+
+
+//    public List<UserMissionEntity> getUnusedMissionsForUser(String userId) {
+//        // user 찾기
+//        User user = userRepository.findByUserId(userId);
+//        if (user == null) {
+//            return Collections.emptyList();
+//        }
+//
+//        // 사용하지 않은 미션 가져오기
+//        List<UserMissionEntity> unusedMissions = userMissionRepository.findByUserIdAndUsed(user, false);
+//
+//        Collections.shuffle(unusedMissions);
+//        return unusedMissions.stream().limit(3).collect(Collectors.toList());
+//
+//    }
 }
